--- a/package.json
+++ b/package.json
@@ -6,10 +6,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "alert": "^5.1.4",
+    "axios": "^1.5.1",
+    "browserify-zlib": "^0.2.0",
+    "error-page": "^0.0.7",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-dual-listbox": "^5.0.2",
+    "react-popup-alert": "^2.0.0",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "^5.0.1",
+    "react-select": "^5.7.7",
+    "sass": "^1.69.1",
+    "scss": "^0.2.4",
+    "sweetalert2": "^11.7.31",
+    "sweetalert2-react-content": "^5.0.7",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.88.2",
+    "yup": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
